syntax = "proto3";

package io.harness.pms.ambiance;

option java_multiple_files = true;

import "io/harness/pms/steps/step_type.proto";

message Level {
  string setupId = 1;
  string runtimeId = 2;
  string identifier = 3;
  io.harness.pms.steps.StepType stepType = 4;
  string group = 5;
}